--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,16 +10,18 @@
     <!-- 对话框的填充颜色 -->
     <color name="confirm_cancel_util_dialog_solid_color">#ffffffff</color>
     <!-- 对话框的标题颜色 -->
-    <color name="confirm_cancel_util_dialog_title_color">#000000</color>
+    <color name="confirm_cancel_util_dialog_title_color">#4065EF</color>
+    <!-- 对话框的中横线颜色 -->
+    <color name="confirm_cancel_util_dialog_delever_h_color">#4065EF</color>
     <!-- 对话框的内容颜色 -->
     <color name="confirm_cancel_util_dialog_message_color">#6A6A6A</color>
     <!-- 对话框的右侧按钮默认颜色 -->
-    <color name="confirm_cancel_util_dialog_btn_right_color">#ffffff</color>
+    <color name="confirm_cancel_util_dialog_btn_right_color">#4065EF</color>
     <!-- 对话框的左侧按钮颜色 -->
-    <color name="confirm_cancel_util_dialog_btn_left_color">#4065EF</color>
+    <color name="confirm_cancel_util_dialog_btn_left_color">#ffffff</color>
     <!-- 对话框的右侧按钮文字颜色 -->
-    <color name="confirm_cancel_util_dialog_btn_right_text_color">#000000</color>
+    <color name="confirm_cancel_util_dialog_btn_right_text_color">#ffffff</color>
     <!-- 对话框的左侧按钮文字颜色 -->
-    <color name="confirm_cancel_util_dialog_btn_left_text_color">#ffffffff</color>
+    <color name="confirm_cancel_util_dialog_btn_left_text_color">#000000</color>
 
 </resources>
