--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ConfirmCancelDialogUtil"/>
+        android:text="ConfirmCancelUtilDialog"/>
 </LinearLayout>
